# rls2fga

./: Cargo.toml  README.md  plan.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
scripts/: install-hooks.sh  validate-commit-msg.sh
src/: lib.rs  main.rs
src/classifier/: ast_args.rs  function_registry.rs  mod.rs  patterns.rs  policy_classifier.rs  recognizers.rs
src/generator/: db_lookup.rs  ir.rs  json_model.rs  mod.rs  model_generator.rs  role_relations.rs  tuple_generator.rs
src/output/: formatter.rs  mod.rs  report.rs
src/parser/: expr.rs  function_analyzer.rs  mod.rs  names.rs  sql_parser.rs
tests/: classifier_edge_case_tests.rs  classifier_tests.rs  cli_min_confidence_tests.rs  common_patterns_tests.rs  confidence_filtering_tests.rs  duplication_guard_tests.rs  end_to_end_tests.rs  generation_edge_case_tests.rs  generator_tests.rs  openfga_integration_tests.rs  openfga_postgres_parity_tests.rs  openfga_semantic_tests.rs  output_formatter_tests.rs  parser_tests.rs  pattern_generation_tests.rs  policy_composition_tests.rs  refactor_rls_semantics_tests.rs  xtask_cli_tests.rs
tests/fixtures/abac_status/: function_registry.json  input.sql
tests/fixtures/attribute_guard/: input.sql
tests/fixtures/compound_or/: input.sql
tests/fixtures/constant_bool/: input.sql
tests/fixtures/current_user_equality/: input.sql
tests/fixtures/earth_metabolome/: input.sql
tests/fixtures/in_subquery_membership/: input.sql
tests/fixtures/membership_check/: input.sql
tests/fixtures/membership_wrapped_function_safe/: input.sql
tests/fixtures/membership_wrapped_function_unsafe/: input.sql
tests/fixtures/multi_policy_table/: input.sql
tests/fixtures/parent_inheritance/: input.sql
tests/fixtures/public_flag/: input.sql
tests/fixtures/role_in_list/: function_registry.json  input.sql
tests/fixtures/simple_ownership/: input.sql
tests/fixtures/supabase_auth/: input.sql
tests/fixtures/tenant_isolation/: input.sql
tests/snapshots/: end_to_end_tests__emi_model.snap  end_to_end_tests__emi_tuples.snap  generator_tests__generate_abac_status_model.snap  generator_tests__generate_abac_status_tuples.snap  generator_tests__generate_attribute_guard_model.snap  generator_tests__generate_attribute_guard_tuples.snap  generator_tests__generate_compound_or_model.snap  generator_tests__generate_compound_or_tuples.snap  generator_tests__generate_constant_bool_model.snap  generator_tests__generate_constant_bool_tuples.snap  generator_tests__generate_emi_json_model.snap  generator_tests__generate_emi_model.snap  generator_tests__generate_emi_tuples.snap  generator_tests__generate_membership_check_model.snap  generator_tests__generate_membership_check_tuples.snap  generator_tests__generate_parent_inheritance_model.snap  generator_tests__generate_parent_inheritance_tuples.snap  generator_tests__generate_public_flag_model.snap  generator_tests__generate_public_flag_tuples.snap  generator_tests__generate_role_in_list_model.snap  generator_tests__generate_role_in_list_tuples.snap  generator_tests__generate_simple_ownership_model.snap  generator_tests__pg_has_role_tuples.snap  generator_tests__role_accessor_model.snap  generator_tests__role_accessor_tuples.snap
tests/support/: mod.rs  openfga.rs
