[package]
name = "rls2fga"
version = "0.1.0"
edition = "2021"
description = "Translate PostgreSQL RLS policies into OpenFGA authorization models"

[features]
default = []
agent = ["reqwest", "tokio"]
db = ["sqlx"]

[dependencies]
sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs", branch = "main", features = ["serde"] }
sql-traits = { git = "https://github.com/earth-metabolome-initiative/sql-traits" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Optional
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
testcontainers = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Correctness & restriction
correctness = { level = "deny", priority = -1 }
enum_glob_use = "deny"
self_named_module_files = "deny"
# Style
style = { level = "warn", priority = -1 }
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
# Perf
large_enum_variant = "warn"
needless_collect = "warn"
unnecessary_box_returns = "warn"
# Pedantic (selected)
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides — too noisy or not applicable
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
